@@ -1,5 +1,12 @@
 2000-08-21  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): fix
+	a memory leak. xaccTransGetDateStr returns a malloc'd string.
+
+	* src/engine/: Move transaction date routines from date.c to
+	Transaction.c. Move definition of Timespec from Transaction.h
+	to date.h. Some code cleanup in date.c.
+
 	* src/register/QuickFill.c (qfInsertTextRec): When inserting new
 	strings, don't replace older strings that are prefixes of the new
 	string.
